crates/tui/tests/snapshots/render_snapshots__workspace_artifacts_unavailable_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ Act Too Fil Obj Str [Art]
                                                                   │
                                                                   │  Artifact store unavailable
                                                                   │  database could not be opened:…
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│type a message…  (press i to focus · ↵ send)                    │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [WORKSPACE]    Ctrl-C quit          │
