crates/tui/tests/snapshots/render_snapshots__workspace_expanded_diff_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 PRISM v1 · 99 tools ─────────────────────────────────────────────────│ Workspace
· PRISM v1                                                            │  Activity  Tools [Files]
                                                                      │
⚙ Running alloy_sample                                                │▸ ~ crates/tui/src/app.rs
                                                                      │  +23 -4
⚙ alloy_sample: W0.3 Mo0.2 Ta0.3 Nb0.2                                │  path: crates/tui/src/app.…
                                                                      │  action: modified
⚙ write_file: Updated crates/tui/src/app.rs                           │  lang: rust
                                                                      │  changes: +23 -4
                                                                      │  diff:
                                                                      │   --- a/crates/tui/src/app.r
                                                                      │   s
                                                                      │   +++ b/crates/tui/src/app.r
                                                                      │   s
                                                                      │   @@ -108,6 +108,9 @@
                                                                      │        pub tool_calls: Vec<T
                                                                      │   oolCallState>,
                                                                      │   +    pub prompts: Vec<Prom
                                                                      │   …
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
  Ready  model: fake-backend   [WORKSPACE]                            │
──────────────────────────────────────────────────────────────────────│
Type a message... (press 'i' to focus input)                          │
                                                                      │
