crates/tui/tests/snapshots/render_snapshots__workspace_objects_empty_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ Act Sto Too Fil [Obj] Str Art
                                                                   │
                                                                   │  No object updates received
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│type a message…  (press i to focus · ↵ send)                    │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [WORKSPACE]    Ctrl-C quit       │
