crates/tui/tests/snapshots/render_snapshots__workspace_objects_tab_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ Act Sto Too Fil [Obj] Str Art
                                                                   │
                                                                   │  done    ◇ W-BCC a=3.14A
                                                                   │▸ 50%     ▶ MD NPT 300K 10000 s…
                                                                   │  done    ⬡ CrMnFeCoNi HEA ★
                                                                   │  FAILED  ▶ MD NVT 500K
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│type a message…  (press i to focus · ↵ send)                    │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [WORKSPACE]    Ctrl-C quit       │
