crates/tui/tests/snapshots/render_snapshots__workspace_structures_selected_cif_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
┌────────────────────────────────────────────────────────────────┐ │ Act Sto Too Fil Obj [Str] Art
│ Structure — TiAl                                               │ │
│                                                                │ │▸ ◇ TiAl
│formula:     TiAl                                               │ │    2 atoms · Al1 Ti1 · user_im…
│atoms:       2                                                  │ │    cache://0f7a1c2e9b4d4a6f/st…
│composition: Al1 Ti1                                            │ │
│source:      user_import                                        │ │
│ref:         cache://0f7a1c2e9b4d4a6f/structure.cif             │ │
│tool:        structure_import                                   │ │
│                                                                │ │
│── structure ──                                                 │ │
│Al1 Ti1                                                         │ │
│2 sites                                                         │ │
│asymmetric unit — symmetry operations not applied               │ │
│space group  P 4/m m m                                          │ │
│a b c  4.005  4.005  4.171 Å                                    │ │
│α β γ  90.00°  90.00°  90.00°                                   │ │
│species      Ti×1  Al×1                                         │ │
│                                                                │ │
│                                                                │ │
│                         ⢀⣀⡠⠤⠒⠒⢹⠒⠤⡀                             │ │
│                   ⣀⠤⠤⠒⠊⠉⠁     ⢸  ⠈⠑⠢⣀                          │ │
└────────────────────────────────────────────────────────────────┘ │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│type a message…  (press i to focus · ↵ send)                    │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [WORKSPACE]    Ctrl-C quit       │
